tests/ui/suggestions/call-on-unimplemented-fn-ptr.stderr
error[E0277]: the trait bound `fn() -> Foo: Bar` is not satisfied
  --> $DIR/call-on-unimplemented-fn-ptr.rs:10:15
   |
LL |     needs_bar(f);
   |     --------- ^ the trait `Bar` is not implemented for `fn() -> Foo`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `needs_bar`
  --> $DIR/call-on-unimplemented-fn-ptr.rs:7:17
   |
LL | fn needs_bar<T: Bar>(_: T) {}
   |                 ^^^ required by this bound in `needs_bar`
help: use parentheses to call this function pointer
   |
LL |     needs_bar(f());
   |                ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
